fix too small and too big posts

--- a/media/css/new/planet.css
+++ b/media/css/new/planet.css
@@ -15,6 +15,8 @@ span.bullet {
 .post {
     width: 640px;
     margin-bottom: 32px;
+    overflow: hidden;
+    clear: left;
 }
 .post .title { margin-bottom: 5px; }
 .post .title a {
